--- a/WriteAndErase/Views/ListProductsView.axaml
+++ b/WriteAndErase/Views/ListProductsView.axaml
@@ -3,6 +3,78 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="WriteAndErase.Views.ListProductsView">
-  Welcome to Avalonia!
+             x:Class="WriteAndErase.Views.ListProductsView"
+			 xmlns:conv="using:WriteAndErase.Converters"
+			 xmlns:vm="using:WriteAndErase.ViewModels"
+			 x:DataType="vm:ListProductsViewModel">
+
+	<UserControl.Resources>
+		<conv:ImageConverter x:Key="imgConv"/>
+	</UserControl.Resources>
+
+	<Grid RowDefinitions="auto, *">
+		<Grid Grid.Row="0" Margin="10">
+			<Button Content="Корзина" Command="{}" IsVisible="{Binding IsVisibleButton}"
+					HorizontalAlignment="Left" VerticalAlignment="Center"/>
+		</Grid>
+		<Grid Grid.Row="1" Margin="20 0" RowDefinitions="Auto, *, Auto">
+
+			<StackPanel Grid.Row="0" Margin="0 20 0 0" Orientation="Vertical">
+				<Grid ColumnDefinitions="*, *, *">
+					<StackPanel Grid.Column="0">
+						<TextBlock Text="Поиск"/>
+						<Panel Height="2"/>
+						<TextBox Watermark="Поиск" Text="{Binding Search}" Margin="0 0 0 10"/>
+					</StackPanel>
+					<StackPanel Grid.Column="1" Margin="10 0">
+						<TextBlock Text="Сортировка"/>
+						<Panel Height="2"/>
+						<ComboBox HorizontalAlignment="Stretch" ItemsSource="{Binding ListSortedType}" SelectedIndex="{Binding SelectedSortedType}"/>
+					</StackPanel>
+					<StackPanel Grid.Column="2">
+						<TextBlock Text="Скидка"/>
+						<Panel Height="2"/>
+						<ComboBox HorizontalAlignment="Stretch" ItemsSource="{Binding ListFilterType}" SelectedIndex="{Binding SelectedFilterType}"/>
+					</StackPanel>
+				</Grid>
+			</StackPanel>
+			<ScrollViewer Grid.Row="1">
+
+				<ListBox ItemsSource="{Binding ProductsPreview}" SelectedItem="{Binding SelectedProduct}">
+					<ListBox.ItemTemplate>
+						<DataTemplate>
+							<Border BorderThickness="2" BorderBrush="#498C51">
+								<Grid ColumnDefinitions="Auto, *, Auto">
+									<StackPanel Grid.Column="0" VerticalAlignment="Center" Margin="5">
+										<Image Width="100" Height="100" Source="{Binding Image, Converter={StaticResource ResourceKey=imgConv}}" Margin="0 0 15 0"/>
+									</StackPanel>
+									<StackPanel Grid.Column="1">
+										<TextBlock Text="{Binding Name}" FontWeight="Bold"/>
+										<TextBlock Text="{Binding Description}" TextWrapping="Wrap"/>
+										<TextBlock Text="{Binding IdManufacturerNavigation.Name, StringFormat=Производитель: {0}}" TextWrapping="Wrap"/>
+										<TextBlock Grid.Column="2">
+											<TextBlock.Inlines>
+												<Run Text="Цена:"/>
+												<Run Text="{Binding CostWithDiscount, StringFormat={}{0:F2}}"/>
+												<Run Text="{Binding CostPreview, StringFormat={}{0:F2}}" Foreground="Red" TextDecorations="Strikethrough"/>
+												<Run Text="руб."/>
+											</TextBlock.Inlines>
+										</TextBlock>
+									</StackPanel>
+									<TextBlock Text="{Binding CurrentDiscount, StringFormat={}{0:F1}%}" Grid.Column="2"/>
+								</Grid>
+							</Border>
+						</DataTemplate>
+					</ListBox.ItemTemplate>
+					<ListBox.ContextMenu>
+						<ContextMenu>
+							<MenuItem Header="Добавить к заказу" Command="{Binding AddProductCommand}"/>
+						</ContextMenu>
+					</ListBox.ContextMenu>
+				</ListBox>
+			</ScrollViewer>
+			<TextBlock Grid.Row="2" Text="{Binding MessageCountProduct}"
+					   HorizontalAlignment="Right" Margin="0 5 0 10"/>
+		</Grid>
+	</Grid>
 </UserControl>
