--- a/WriteAndErase/Views/ListProductsView.axaml
+++ b/WriteAndErase/Views/ListProductsView.axaml
@@ -14,13 +14,26 @@
 
 	<Grid RowDefinitions="auto, *">
 		<Grid Grid.Row="0" Margin="10">
-			<Button Content="Корзина" Command="{}" IsVisible="{Binding IsVisibleButton}"
-					HorizontalAlignment="Left" VerticalAlignment="Center"/>
+			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+				<Image Width="30" Height="30" Source="/Assets/logo.png" VerticalAlignment="Center"/>
+				<TextBlock Text="Список продуктов" Margin="10 0" Classes="H1" VerticalAlignment="Center"/>
+			</StackPanel>
+			<Button Content="Выйти" Command="{Binding GoAuthCommand}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+			<TextBlock Text="{Binding Name}" HorizontalAlignment="Right" VerticalAlignment="Center"/>
 		</Grid>
-		<Grid Grid.Row="1" Margin="20 0" RowDefinitions="Auto, *, Auto">
-
-			<StackPanel Grid.Row="0" Margin="0 20 0 0" Orientation="Vertical">
-				<Grid ColumnDefinitions="*, *, *">
+		<Grid Grid.Row="1" RowDefinitions="auto, *">
+			<Grid Grid.Row="0" Margin="10">
+				<StackPanel Orientation="Horizontal">
+					<Button Content="Оформить заказ" Command="{Binding ViewOrderCommand}"
+							IsVisible="{Binding IsVisibleButton}" Margin="0 0 10 0"/>
+					<Button Content="Работа с заказами" Command="{Binding ViewOrdersCommand}"
+							IsVisible="{Binding IsVisibleManager}" Margin="0 0 10 0"/>
+					<Button Content="Добавить товар" Command="{Binding AddProductCommand}"
+							IsVisible="{Binding IsVisibleAdmin}"/>
+				</StackPanel>
+			</Grid>
+			<Grid Grid.Row="1" Margin="20 0" RowDefinitions="Auto, *, Auto">
+				<Grid Grid.Row="0" ColumnDefinitions="*, *, *">
 					<StackPanel Grid.Column="0">
 						<TextBlock Text="Поиск"/>
 						<Panel Height="2"/>
@@ -36,45 +49,54 @@
 						<Panel Height="2"/>
 						<ComboBox HorizontalAlignment="Stretch" ItemsSource="{Binding ListFilterType}" SelectedIndex="{Binding SelectedFilterType}"/>
 					</StackPanel>
-				</Grid>
-			</StackPanel>
-			<ScrollViewer Grid.Row="1">
-
-				<ListBox ItemsSource="{Binding ProductsPreview}" SelectedItem="{Binding SelectedProduct}">
-					<ListBox.ItemTemplate>
-						<DataTemplate>
-							<Border BorderThickness="2" BorderBrush="#498C51">
-								<Grid ColumnDefinitions="Auto, *, Auto">
-									<StackPanel Grid.Column="0" VerticalAlignment="Center" Margin="5">
-										<Image Width="100" Height="100" Source="{Binding Image, Converter={StaticResource ResourceKey=imgConv}}" Margin="0 0 15 0"/>
-									</StackPanel>
-									<StackPanel Grid.Column="1">
-										<TextBlock Text="{Binding Name}" FontWeight="Bold"/>
-										<TextBlock Text="{Binding Description}" TextWrapping="Wrap"/>
-										<TextBlock Text="{Binding IdManufacturerNavigation.Name, StringFormat=Производитель: {0}}" TextWrapping="Wrap"/>
-										<TextBlock Grid.Column="2">
-											<TextBlock.Inlines>
-												<Run Text="Цена:"/>
-												<Run Text="{Binding CostWithDiscount, StringFormat={}{0:F2}}"/>
-												<Run Text="{Binding CostPreview, StringFormat={}{0:F2}}" Foreground="Red" TextDecorations="Strikethrough"/>
-												<Run Text="руб."/>
-											</TextBlock.Inlines>
-										</TextBlock>
-									</StackPanel>
-									<TextBlock Text="{Binding CurrentDiscount, StringFormat={}{0:F1}%}" Grid.Column="2"/>
-								</Grid>
-							</Border>
-						</DataTemplate>
-					</ListBox.ItemTemplate>
-					<ListBox.ContextMenu>
-						<ContextMenu>
-							<MenuItem Header="Добавить к заказу" Command="{Binding AddProductCommand}"/>
-						</ContextMenu>
-					</ListBox.ContextMenu>
-				</ListBox>
-			</ScrollViewer>
-			<TextBlock Grid.Row="2" Text="{Binding MessageCountProduct}"
-					   HorizontalAlignment="Right" Margin="0 5 0 10"/>
+				</Grid>			
+				<ScrollViewer Grid.Row="1">
+					<ListBox ItemsSource="{Binding ProductsPreview}" SelectedItem="{Binding SelectedProduct}">
+						<ListBox.ItemTemplate>
+							<DataTemplate>
+								<Border BorderThickness="2" BorderBrush="#498C51">
+									<Grid RowDefinitions="Auto,Auto">
+										<Grid Grid.Row="0" ColumnDefinitions="Auto, *, Auto">
+											<StackPanel Grid.Column="0" VerticalAlignment="Center" Margin="5">
+												<Image Width="100" Height="100" Source="{Binding Image, Converter={StaticResource ResourceKey=imgConv}}" Margin="0 0 15 0"/>
+											</StackPanel>
+											<StackPanel Grid.Column="1">
+												<TextBlock Text="{Binding Name}" FontWeight="Bold"/>
+												<TextBlock Text="{Binding Description}" TextWrapping="Wrap"/>
+												<TextBlock Text="{Binding IdManufacturerNavigation.Name, StringFormat=Производитель: {0}}" TextWrapping="Wrap"/>
+												<TextBlock Grid.Column="2">
+													<TextBlock.Inlines>
+														<Run Text="Цена:"/>
+														<Run Text="{Binding CostWithDiscount, StringFormat={}{0:F2}}"/>
+														<Run Text="{Binding CostPreview, StringFormat={}{0:F2}}" Foreground="Red" TextDecorations="Strikethrough"/>
+														<Run Text="руб."/>
+													</TextBlock.Inlines>
+												</TextBlock>
+											</StackPanel>
+											<TextBlock Text="{Binding CurrentDiscount, StringFormat={}{0:F1}%}" Grid.Column="2" Margin="10"/>
+										</Grid>
+										<StackPanel Grid.Row="1" Orientation="Horizontal"
+													IsVisible="{Binding $parent[UserControl].((vm:ListProductsViewModel)DataContext).IsVisibleAdmin}">
+											<Button Command="{Binding $parent[UserControl].((vm:ListProductsViewModel)DataContext).EditProductCommand}"
+													Content="Редактировать" CommandParameter="{Binding}" Margin="5"/>
+											<Button Command="{Binding $parent[UserControl].((vm:ListProductsViewModel)DataContext).DeleteProductCommand}"
+													Content="Удалить" CommandParameter="{Binding}" Margin="5"/>
+										</StackPanel>
+									</Grid>
+								</Border>
+							</DataTemplate>
+						</ListBox.ItemTemplate>
+						<ListBox.ContextMenu>
+							<ContextMenu>
+								<MenuItem Header="Добавить к заказу" Command="{Binding AddProductToOrderCommand}"/>
+							</ContextMenu>
+						</ListBox.ContextMenu>
+					</ListBox>
+				</ScrollViewer>
+				<TextBlock Grid.Row="2" Text="{Binding MessageCountProduct}"
+						   HorizontalAlignment="Right" Margin="0 5 0 10"/>
+			</Grid>
 		</Grid>
 	</Grid>
+	
 </UserControl>
